# QtwmFM

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
src/: main.cpp
src/Header/: Header.cpp  Header.hpp
src/Header/Menu/: Menu.cpp  Menu.hpp
src/MainWindow/: MainWindow.cpp  MainWindow.hpp
src/Workspace/: Workspace.cpp  Workspace.hpp
src/Workspace/FileViewWidget/: FileViewWidget.cpp  FileViewWidget.hpp
src/Workspace/FileViewWidget/ViewPages/IconsViewPage/: IconsViewPage.cpp  IconsViewPage.hpp
